# CMakeList.txt : projet CMake pour TDs, incluez la source et définissez
# la logique spécifique au projet ici.
#

# Ajoutez une source à l'exécutable de ce projet.
add_executable (TD2 exo1.cpp)
add_executable (TD2_exo2 exo2.cpp)
#add_executable (TD2_exo4 exo3.cpp)
#add_executable (TD12_exo4 exo4.cpp)